...
                                      height: 22,
                                      child: CircularProgressIndicator(
                                        strokeWidth: 2,
                                        color: Colors.white,
                                      ),
                                    )
                                  : const Text('SIGN UP'),
                            ),
                          );
                        },
                      ),
                      const SizedBox(height: sSmall),
                      BlocBuilder<AuthBloc, AuthState>(
...
                    padding: const EdgeInsets.only(bottom: sMedium),
                    child: Row(
                      mainAxisAlignment: MainAxisAlignment.center,
                      children: [
                        const Text("Already have an account? "),
                        InkWell(
                          key: const Key('goto_login'),

                          onTap: () => context.go('/login'),
                          child: const Text(
                            "Log in",
                            style: TextStyle(
                              fontWeight: FontWeight.bold,
...
