...
  }

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        title: const Text("Your Graphs"),
        actions: [
          IconButton.outlined(
            icon: const Icon(Icons.add_box_outlined),
            onPressed: () async {
              final title = await _showTitleDialog(context, {});

...
